--- a/packages/suika/package.json
+++ b/packages/suika/package.json
@@ -19,6 +19,7 @@
     "@suika/geo": "workspace:^",
     "@suika/icons": "workspace:^",
     "ahooks": "^3.7.4",
+    "axios": "^1.7.3",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
